changes made to initial file

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </ul>
     <p>Check out <a href="http://moringaschool.com/">Moringa School</a></p>
     <p>Here is a link to my <a href="favorite-things.html/>">favorite things</a></p>
-    <img src="pet website/images (1).jpeg">
+    <img src="images/images.jpeg">
 </body>
 </html>
