--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li>And a lot more</li>
     </ul>
     <p>Check out <a href="http://moringaschool.com/">Moringa School</a></p>
-    <p>Here is a link to my <a href="favorite-things.html/>">favorite things</a></p>
+    <p>Here is a link to my <a href="https://raywhizchengz.github.io/Favoritethings.github.io/>">favorite things</a></p>
     <img src="images/images.jpeg">
 </body>
 </html>
