--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My first Webpage</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
     <h1>Written with a little guidance from <em>Moringa</em> </h1>
 </head>
 <body>
@@ -19,7 +19,7 @@
         <li>And a lot more</li>
     </ul>
     <p>Check out <a href="http://moringaschool.com/">Moringa School</a></p>
-    <p>Here is a link to my <a href="https://raywhizchengz.github.io/Favoritethings.github.io/>">favorite things</a></p>
+    <p>Here is a link to my <a href=>"favorite things"</a></p>
     <img src="images/images.jpeg">
 </body>
 </html>
