--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </ul>
     <p>Check out <a href="http://moringaschool.com/">Moringa School</a></p>
     <p>Here is a link to my <a href=>"favorite things"</a></p>
-    <img src="images/images.jpeg">
+    <img src="img1.jpeg">
 </body>
 </html>
